--- a/courses/index.html
+++ b/courses/index.html
@@ -1,1 +1,176 @@
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+  <meta charset="UTF-8">
+  <title>サークル紹介 | 10グループの学び</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;700&display=swap" rel="stylesheet">
+  <style>
+    body {
+      margin: 0;
+      font-family: 'Noto Sans JP', sans-serif;
+      background: linear-gradient(to bottom, #eef2f7, #ffffff);
+      color: #333;
+    }
+    header.hero {
+      background: linear-gradient(135deg, #4e54c8, #8f94fb);
+      color: white;
+      padding: 80px 20px;
+      text-align: center;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+    }
+    header.hero h1 {
+      font-size: 2.8em;
+      margin-bottom: 10px;
+    }
+    header.hero p {
+      font-size: 1.2em;
+      opacity: 0.95;
+      max-width: 700px;
+      margin: 0 auto;
+    }
+    .section {
+      max-width: 1000px;
+      margin: 60px auto;
+      padding: 0 20px;
+    }
+    .group-box {
+      background: white;
+      border-left: 6px solid #4e54c8;
+      padding: 25px 20px;
+      margin-bottom: 30px;
+      border-radius: 12px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.05);
+      transition: transform 0.2s ease;
+    }
+    .group-box:hover {
+      transform: translateY(-3px);
+    }
+    .group-box h2 {
+      margin-top: 0;
+      color: #4e54c8;
+      font-size: 1.4em;
+    }
+    .group-box p {
+      margin-top: 8px;
+      line-height: 1.6;
+    }
+    .flow, .faq, .line-contact {
+      background: #f7f9fc;
+      border-radius: 12px;
+      padding: 30px 20px;
+      margin-top: 50px;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.05);
+    }
+    .flow h3, .faq h3, .line-contact h3 {
+      color: #4e54c8;
+      margin-bottom: 15px;
+      font-size: 1.3em;
+    }
+    .flow p, .faq p, .line-contact p {
+      margin-bottom: 12px;
+      line-height: 1.6;
+    }
+    .line-contact {
+      text-align: center;
+    }
+    .line-button {
+      display: inline-block;
+      background-color: #00c300;
+      color: white;
+      padding: 12px 20px;
+      border-radius: 8px;
+      text-decoration: none;
+      font-weight: bold;
+      transition: background 0.3s ease;
+      margin-top: 10px;
+    }
+    .line-button:hover {
+      background-color: #009900;
+    }
+    .line-contact img {
+      margin-top: 20px;
+      width: 180px;
+      border-radius: 8px;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+    }
+    @media (max-width: 600px) {
+      header.hero h1 {
+        font-size: 2em;
+      }
+      .group-box h2 {
+        font-size: 1.2em;
+      }
+    }
+  </style>
+</head>
+<body>
+  <header class="hero">
+    <h1>10グループで広がる学びの輪</h1>
+    <p>サークルでは、少人数グループでそれぞれ異なるテーマを選び、教え合いながら楽しく学んでいます。初心者から上級者まで、誰でも参加できます！</p>
+  </header>
 
+  <section class="section">
+    <div class="group-box">
+      <h2>🖥️ グループA：パソコン入門</h2>
+      <p>電源の入れ方、マウス操作、ファイル管理など、基本操作を丁寧に学びます。</p>
+    </div>
+    <div class="group-box">
+      <h2>📱 グループB：スマホ活用</h2>
+      <p>LINE、写真整理、地図アプリなど、日常生活に役立つスマホ操作を共有。</p>
+    </div>
+    <div class="group-box">
+      <h2>🌐 グループC：ホームページ制作</h2>
+      <p>HTML・CSSを使って、自分だけのWebページを作成する実践型グループ。</p>
+    </div>
+    <div class="group-box">
+      <h2>💡 グループD：プログラミング初級</h2>
+      <p>ScratchやPythonを使って、楽しくプログラミングの基礎を学びます。</p>
+    </div>
+    <div class="group-box">
+      <h2>🔧 グループE：ハードウェア研究</h2>
+      <p>パソコンの内部構造や部品の役割を学び、実際に分解・組み立てを体験。</p>
+    </div>
+    <div class="group-box">
+      <h2>🛠️ グループF：ソフト・設定相談</h2>
+      <p>困っている設定やソフトの使い方を持ち寄り、みんなで解決するグループ。</p>
+    </div>
+    <div class="group-box">
+      <h2>⌨️ グループG：タイピング練習</h2>
+      <p>正しい指使いとスピードアップを目指して、楽しくタイピングを練習します。</p>
+    </div>
+    <div class="group-box">
+      <h2>🖼️ グループH：写真編集入門</h2>
+      <p>スマホやパソコンで写真を加工・整理する方法を学びます。</p>
+    </div>
+    <div class="group-box">
+      <h2>📊 グループI：Excel活用</h2>
+      <p>表計算やグラフ作成など、仕事や生活に役立つExcelの使い方を学びます。</p>
+    </div>
+    <div class="group-box">
+      <h2>📰 グループJ：ITニュース共有</h2>
+      <p>最新のIT技術や話題を持ち寄り、みんなで意見交換する情報共有グループ。</p>
+    </div>
+
+    <div class="flow">
+      <h3>参加の流れ</h3>
+      <p>① 興味のあるグループを選ぶ</p>
+      <p>② 開催日に会場へ参加（事前申込不要）</p>
+      <p>③ みんなで教え合いながら学習</p>
+      <p>④ ご不明点はLINEでお気軽にお問い合わせください</p>
+      <a href="https://lin.ee/あなたのLINEリンク" target="_blank" class="line-button">LINEで問い合わせる</a>
+    </div>
+
+    <div class="faq">
+      <h3>よくある質問</h3>
+      <p><strong>Q. 初心者でも参加できますか？</strong><br>もちろんです！初心者向けグループも多数あります。</p>
+      <p><strong>Q. 途中でグループを変えてもいいですか？</strong><br>自由に移動できます。興味に応じて複数参加もOK！</p>
+      <p><strong>Q. 参加費はかかりますか？</strong><br>基本無料ですが、教材費が必要な場合は事前にお知らせします。</p>
+    </div>
+
+    <div class="line-contact">
+      <h3>LINEでお問い合わせ・参加連絡</h3>
+      <p>ご質問や参加希望は、LINEからお気軽にどうぞ！</p>
+      <a href="https://lin.ee/あなたのLINEリンク" target="_blank" class="line-button">LINEで連絡する</a>
+
+<a href="https://lin.ee/あなたの予約リンク" target="_blank" class="line-button">LINEで予約する</a>
