--- a/location/index.html
+++ b/location/index.html
@@ -1,1 +1,162 @@
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+  <meta charset="UTF-8">
+  <title>活動場所 | Location</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;700&display=swap" rel="stylesheet">
+  <style>
+    body {
+      margin: 0;
+      font-family: 'Noto Sans JP', sans-serif;
+      background-color: #f4f6f8;
+      color: #333;
+    }
 
+    header.hero {
+      background: linear-gradient(135deg, #00c6ff, #0072ff);
+      color: white;
+      padding: 60px 20px;
+      text-align: center;
+    }
+
+    header.hero h1 {
+      font-size: 2.5em;
+      margin-bottom: 10px;
+    }
+
+    header.hero p {
+      font-size: 1.2em;
+      opacity: 0.9;
+    }
+
+    .section {
+      max-width: 900px;
+      margin: 40px auto;
+      padding: 0 20px;
+    }
+
+    .info-box {
+      background: white;
+      border-radius: 12px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.08);
+      padding: 30px;
+      margin-bottom: 30px;
+    }
+
+    .info-box h2 {
+      font-size: 1.5em;
+      margin-bottom: 15px;
+      color: #0072ff;
+    }
+
+    .info-box p, .info-box ul {
+      font-size: 1em;
+      line-height: 1.6;
+    }
+
+    .info-box ul {
+      list-style: none;
+      padding-left: 0;
+    }
+
+    .info-box ul li::before {
+      content: "📍";
+      margin-right: 8px;
+    }
+
+    iframe.map {
+      width: 100%;
+      height: 400px;
+      border: none;
+      border-radius: 12px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+    }
+
+    .line-box {
+      text-align: center;
+      background: #eaf3ff;
+      padding: 30px 20px;
+      border-radius: 12px;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.05);
+    }
+
+    .line-box h2 {
+      color: #0072ff;
+      margin-bottom: 10px;
+    }
+
+    .line-button {
+      display: inline-block;
+      background-color: #00c300;
+      color: white;
+      padding: 12px 20px;
+      border-radius: 8px;
+      text-decoration: none;
+      font-weight: bold;
+      transition: background 0.3s ease;
+      margin-top: 10px;
+    }
+
+    .line-button:hover {
+      background-color: #009900;
+    }
+
+    .line-box img {
+      margin-top: 20px;
+      width: 180px;
+      border-radius: 8px;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+    }
+
+    @media (max-width: 600px) {
+      header.hero h1 {
+        font-size: 2em;
+      }
+
+      .info-box {
+        padding: 20px;
+      }
+    }
+  </style>
+</head>
+<body>
+  <header class="hero">
+    <h1>活動場所・アクセス</h1>
+    <p>オフラインイベントは主に大阪府和泉市で開催していますが、<br>開催場所は毎回変更になる場合があります。</p>
+  </header>
+
+  <section class="section">
+    <div class="info-box">
+      <h2>メイン会場（通常開催）</h2>
+      <p>
+        和泉市市民交流センター<br>
+        〒594-0071 大阪府和泉市府中町2丁目7-5
+      </p>
+    </div>
+
+    <div class="info-box">
+      <h2>アクセス方法</h2>
+      <ul>
+        <li>JR阪和線「和泉府中駅」から徒歩5分</li>
+        <li>駐車場あり（無料）</li>
+        <li>バリアフリー対応施設</li>
+      </ul>
+    </div>
+
+    <div class="info-box">
+      <h2>今月の開催場所</h2>
+      <p>今月のイベントは以下の場所で開催予定です：</p>
+      <p><strong>〇〇市〇〇町〇〇会館（仮）</strong><br>※詳細はLINEでご確認ください。</p>
+    </div>
+
+    <div class="line-box">
+      <h2>LINEで最新の開催場所を確認</h2>
+      <p>毎回の開催場所や時間はLINEでお知らせしています。<br>友だち追加して最新情報をチェック！</p>
+      <a href="https://lin.ee/あなたのLINEリンク" target="_blank" class="line-button">LINEで確認する</a>
+      <br>
+      <img src="images/line-qr.png" alt="LINE QRコード">
+    </div>
+  </section>
+</body>
+</html>
